test/analyzer/input_programs/invalid_programs/program03.tea
a := 'a'
b := a
c := b

# again, arithmetic operations must have
# int/float operands
d := 20.1 + c